--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,8 @@
 platform = espressif8266
 board = esp07
 framework = arduino
+
+lib_deps =
+  # RECOMMENDED
+  # Accept new functionality in a backwards compatible manner and patches
+  knolleary/PubSubClient @ ^2.8
