--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-; [env:esp07]
-; platform = espressif8266
-; board = esp07
-; framework = arduino
-
-[env:esp12e]
+[env:esp07]
 platform = espressif8266
-board = esp12e
+board = esp07
 framework = arduino
+
+; [env:esp12e]
+; platform = espressif8266
+; board = esp12e
+; framework = arduino
 
 ; upload_port = ESP8266.local
 
