dissable redundant libs

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,6 @@ lib_deps =
   # RECOMMENDED
   # Accept new functionality in a backwards compatible manner and patches
   knolleary/PubSubClient @ ^2.8
-  me-no-dev/ESPAsyncTCP @ ^1.2.2
-  me-no-dev/ESP Async WebServer @ ^1.2.3
-  ayushsharma82/AsyncElegantOTA @ ^2.2.5
+  ; me-no-dev/ESPAsyncTCP @ ^1.2.2
+  ; me-no-dev/ESP Async WebServer @ ^1.2.3
+  ; ayushsharma82/AsyncElegantOTA @ ^2.2.5
