--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,20 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp07]
-platform = espressif8266
-board = esp07
-framework = arduino
+; [env:esp07]
+; platform = espressif8266
+; board = esp07
+; framework = arduino
 
 ; [env:esp12e]
 ; platform = espressif8266
 ; board = esp12e
 ; framework = arduino
+
+[env:sonoff_basic]
+platform = espressif8266
+board = sonoff_basic
+framework = arduino
 
 ; upload_port = ESP8266.local
 
@@ -24,6 +29,6 @@ lib_deps =
   # RECOMMENDED
   # Accept new functionality in a backwards compatible manner and patches
   knolleary/PubSubClient @ ^2.8
-  ; me-no-dev/ESPAsyncTCP @ ^1.2.2
-  ; me-no-dev/ESP Async WebServer @ ^1.2.3
-  ; ayushsharma82/AsyncElegantOTA @ ^2.2.5
+  me-no-dev/ESPAsyncTCP @ ^1.2.2
+  me-no-dev/ESP Async WebServer @ ^1.2.3
+  ayushsharma82/AsyncElegantOTA @ ^2.2.5
