--- a/platformio.ini
+++ b/platformio.ini
@@ -32,3 +32,4 @@ lib_deps =
   me-no-dev/ESPAsyncTCP @ ^1.2.2
   me-no-dev/ESP Async WebServer @ ^1.2.3
   ayushsharma82/AsyncElegantOTA @ ^2.2.5
+  olkal/HX711_ADC @ ^1.2.8
