add pololu gyro

--- a/platformio.ini
+++ b/platformio.ini
@@ -33,3 +33,4 @@ lib_deps =
   me-no-dev/ESP Async WebServer @ ^1.2.3
   ayushsharma82/AsyncElegantOTA @ ^2.2.5
   olkal/HX711_ADC @ ^1.2.8
+  pololu/L3G @ ^3.0.0
