modify sonoff for Wire lib problem, add huzzah prototype board

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,9 +18,16 @@
 ; board = esp12e
 ; framework = arduino
 
-[env:sonoff_basic]
+; [env:sonoff_basic]
+; platform = espressif8266
+; ; board = sonoff_basic
+; board = esp01_1m
+; ; board_flash_mode = dout
+; framework = arduino
+
+[env:huzzah]
 platform = espressif8266
-board = sonoff_basic
+board = huzzah
 framework = arduino
 
 ; upload_port = ESP8266.local
@@ -34,3 +41,4 @@ lib_deps =
   ayushsharma82/AsyncElegantOTA @ ^2.2.5
   olkal/HX711_ADC @ ^1.2.8
   pololu/L3G @ ^3.0.0
+  adafruit/Adafruit AMG88xx Library @ ^1.2.1
