--- a/platformio.ini
+++ b/platformio.ini
@@ -30,6 +30,11 @@ platform = espressif8266
 board = huzzah
 framework = arduino
 
+; [env:d1_mini]
+; platform = espressif8266
+; board = d1_mini
+; framework = arduino
+
 ; upload_port = ESP8266.local
 
 lib_deps =
