--- a/platformio.ini
+++ b/platformio.ini
@@ -13,10 +13,10 @@
 ; board = esp07
 ; framework = arduino
 
-; [env:esp12e]
-; platform = espressif8266
-; board = esp12e
-; framework = arduino
+[env:esp12e]
+platform = espressif8266
+board = esp12e
+framework = arduino
 
 ; [env:sonoff_basic]
 ; platform = espressif8266
@@ -25,10 +25,10 @@
 ; ; board_flash_mode = dout
 ; framework = arduino
 
-[env:huzzah]
-platform = espressif8266
-board = huzzah
-framework = arduino
+; [env:huzzah]
+; platform = espressif8266
+; board = huzzah
+; framework = arduino
 
 ; [env:d1_mini]
 ; platform = espressif8266
@@ -43,7 +43,7 @@ lib_deps =
   knolleary/PubSubClient @ ^2.8
   me-no-dev/ESPAsyncTCP @ ^1.2.2
   me-no-dev/ESP Async WebServer @ ^1.2.3
-  ayushsharma82/AsyncElegantOTA @ ^2.2.5
-  olkal/HX711_ADC @ ^1.2.8
+  ; ayushsharma82/AsyncElegantOTA @ ^2.2.5
+  ; olkal/HX711_ADC @ ^1.2.8
   pololu/L3G @ ^3.0.0
-  adafruit/Adafruit AMG88xx Library @ ^1.2.1
+  ; adafruit/Adafruit AMG88xx Library @ ^1.2.1
