--- a/platformio.ini
+++ b/platformio.ini
@@ -40,6 +40,7 @@ framework = arduino
 lib_deps =
   # RECOMMENDED
   # Accept new functionality in a backwards compatible manner and patches
+  bblanchon/ArduinoJson @ ^6.18.4
   knolleary/PubSubClient @ ^2.8
   me-no-dev/ESPAsyncTCP @ ^1.2.2
   me-no-dev/ESP Async WebServer @ ^1.2.3
