--- a/platformio.ini
+++ b/platformio.ini
@@ -42,8 +42,8 @@ lib_deps =
   # Accept new functionality in a backwards compatible manner and patches
   bblanchon/ArduinoJson @ ^6.18.4
   knolleary/PubSubClient @ ^2.8
-  me-no-dev/ESPAsyncTCP @ ^1.2.2
-  me-no-dev/ESP Async WebServer @ ^1.2.3
+  ; me-no-dev/ESPAsyncTCP @ ^1.2.2
+  ; me-no-dev/ESP Async WebServer @ ^1.2.3
   ; ayushsharma82/AsyncElegantOTA @ ^2.2.5
   ; olkal/HX711_ADC @ ^1.2.8
   pololu/L3G @ ^3.0.0
