add exp sensors

--- a/platformio.ini
+++ b/platformio.ini
@@ -48,3 +48,7 @@ lib_deps =
   ; olkal/HX711_ADC @ ^1.2.8
   pololu/L3G @ ^3.0.0
   ; adafruit/Adafruit AMG88xx Library @ ^1.2.1
+  ; adafruit/Adafruit TCS34725 @ ^1.4.0
+  ; adafruit/Adafruit APDS9960 Library @ ^1.2.2
+  ; sparkfun/SparkFun ISL29125 Breakout @ ^1.0.1
+  ; adafruit/Adafruit BNO055 @ ^1.5.1
