move libs to /lib folder conditional compiling only needed libs

--- a/platformio.ini
+++ b/platformio.ini
@@ -46,7 +46,7 @@ lib_deps =
   me-no-dev/ESP Async WebServer @ ^1.2.3
   ; ayushsharma82/AsyncElegantOTA @ ^2.2.5
   ; olkal/HX711_ADC @ ^1.2.8
-  pololu/L3G @ ^3.0.0
+  ; pololu/L3G @ ^3.0.0
   ; adafruit/Adafruit AMG88xx Library @ ^1.2.1
   ; adafruit/Adafruit TCS34725 @ ^1.4.0
   ; adafruit/Adafruit APDS9960 Library @ ^1.2.2
