enable flash mode

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,7 @@ framework = arduino
 ; platform = espressif8266
 ; ; board = sonoff_basic
 ; board = esp01_1m
-; ; board_flash_mode = dout
+; board_flash_mode = dout
 ; framework = arduino
 
 ; [env:huzzah]
