--- a/platformio.ini
+++ b/platformio.ini
@@ -44,6 +44,7 @@ lib_deps =
   knolleary/PubSubClient @ ^2.8
   me-no-dev/ESPAsyncTCP @ ^1.2.2
   me-no-dev/ESP Async WebServer @ ^1.2.3
+  thomasfredericks/Bounce2 @ ^2.70
   ; ayushsharma82/AsyncElegantOTA @ ^2.2.5
   ; olkal/HX711_ADC @ ^1.2.8
   ; pololu/L3G @ ^3.0.0
