turn to dev board

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,17 +13,17 @@
 ; board = esp07
 ; framework = arduino
 
-; [env:esp12e]
-; platform = espressif8266
-; board = esp12e
-; framework = arduino
-
-[env:sonoff_basic]
+[env:esp12e]
 platform = espressif8266
-; board = sonoff_basic
-board = esp01_1m
-board_flash_mode = dout
+board = esp12e
 framework = arduino
+
+; [env:sonoff_basic]
+; platform = espressif8266
+; ; board = sonoff_basic
+; board = esp01_1m
+; board_flash_mode = dout
+; framework = arduino
 
 ; [env:huzzah]
 ; platform = espressif8266
