--- a/platformio.ini
+++ b/platformio.ini
@@ -13,18 +13,19 @@
 ; board = esp07
 ; framework = arduino
 
-; [env:esp12e]
-; platform = espressif8266
-; board = esp12e
-; framework = arduino
-
-[env:esp01_1m]
+[env:esp12e]
 platform = espressif8266
-board = esp01_1m
-board_build.mcu = esp8266
-board_build.f_cpu = 80000000L
+board = esp12e
 framework = arduino
 
+; ;***************************
+; [env:esp01_1m]
+; platform = espressif8266
+; board = esp01_1m
+; board_build.mcu = esp8266
+; board_build.f_cpu = 80000000L
+; framework = arduino
+; ;***************************
 
 ; [env:sonoff_basic]
 ; platform = espressif8266
