--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,15 @@
 ; board = esp07
 ; framework = arduino
 
-[env:esp12e]
+; [env:esp12e]
+; platform = espressif8266
+; board = esp12e
+; framework = arduino
+
+; GYRO!!!
+[env:d1_mini_pro]
 platform = espressif8266
-board = esp12e
+board = d1_mini_pro
 framework = arduino
 
 ; ;***************************
