--- a/platformio.ini
+++ b/platformio.ini
@@ -13,16 +13,16 @@
 ; board = esp07
 ; framework = arduino
 
-; [env:esp12e]
-; platform = espressif8266
-; board = esp12e
-; framework = arduino
+[env:esp12e]
+platform = espressif8266
+board = esp12e
+framework = arduino
 
 ; GYRO!!!
-[env:d1_mini_pro]
-platform = espressif8266
-board = d1_mini_pro
-framework = arduino
+; [env:d1_mini_pro]
+; platform = espressif8266
+; board = d1_mini_pro
+; framework = arduino
 
 ; ;***************************
 ; [env:esp01_1m]
