--- a/platformio.ini
+++ b/platformio.ini
@@ -13,10 +13,10 @@
 ; board = esp07
 ; framework = arduino
 
-[env:esp12e]
-platform = espressif8266
-board = esp12e
-framework = arduino
+; [env:esp12e]
+; platform = espressif8266
+; board = esp12e
+; framework = arduino
 
 ; [env:esp01]
 ; platform = espressif8266
@@ -28,20 +28,20 @@ framework = arduino
 ; board = esp01_1m
 ; framework = arduino
 
-; GYRO!!!
+; GYRO & WATER PROTOTYPE
 ; [env:d1_mini_pro]
 ; platform = espressif8266
 ; board = d1_mini_pro
 ; framework = arduino
 
-; ;***************************
-; [env:esp01_1m]
-; platform = espressif8266
-; board = esp01_1m
-; board_build.mcu = esp8266
-; board_build.f_cpu = 80000000L
-; framework = arduino
-; ;***************************
+;***************************
+[env:esp01_1m]
+platform = espressif8266
+board = esp01_1m
+board_build.mcu = esp8266
+board_build.f_cpu = 80000000L
+framework = arduino
+;***************************
 
 ; [env:sonoff_basic]
 ; platform = espressif8266
