add comment to sonoff

--- a/platformio.ini
+++ b/platformio.ini
@@ -34,6 +34,8 @@
 ; board = d1_mini_pro
 ; framework = arduino
 
+; ---------- SONOFF ----------
+; way aroud for sonoff basic platform which has issues with Wire lib
 ;***************************
 [env:esp01_1m]
 platform = espressif8266
