--- a/platformio.ini
+++ b/platformio.ini
@@ -7,15 +7,36 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+;
+; 
+; ---------- SONOFF ----------
+; way aroud for sonoff basic platform which has issues with Wire lib
+;***************************
+; [env:esp01_1m]
+; platform = espressif8266
+; board = esp01_1m
+; board_build.mcu = esp8266
+; board_build.f_cpu = 80000000L
+; framework = arduino
+; ;***************************
 
+
+;  VALVES
+[env:esp12e]
+platform = espressif8266
+board = esp12e
+framework = arduino
+
+; GYRO
+; [env:d1_mini_pro]
+; platform = espressif8266
+; board = d1_mini_pro
+; framework = arduino
+
+; ------------------------Obsolete or experimental -----------------------------
 ; [env:esp07]
 ; platform = espressif8266
 ; board = esp07
-; framework = arduino
-
-; [env:esp12e]
-; platform = espressif8266
-; board = esp12e
 ; framework = arduino
 
 ; [env:esp01]
@@ -27,23 +48,6 @@
 ; platform = espressif8266
 ; board = esp01_1m
 ; framework = arduino
-
-; GYRO & WATER PROTOTYPE
-; [env:d1_mini_pro]
-; platform = espressif8266
-; board = d1_mini_pro
-; framework = arduino
-
-; ---------- SONOFF ----------
-; way aroud for sonoff basic platform which has issues with Wire lib
-;***************************
-[env:esp01_1m]
-platform = espressif8266
-board = esp01_1m
-board_build.mcu = esp8266
-board_build.f_cpu = 80000000L
-framework = arduino
-;***************************
 
 ; [env:sonoff_basic]
 ; platform = espressif8266
@@ -63,6 +67,8 @@ framework = arduino
 ; framework = arduino
 
 ; upload_port = ESP8266.local
+
+
 
 lib_deps =
   # RECOMMENDED
