--- a/platformio.ini
+++ b/platformio.ini
@@ -8,24 +8,23 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 ;
-; 
+;
 ; ---------- SONOFF ----------
 ; way aroud for sonoff basic platform which has issues with Wire lib
-;***************************
-; [env:esp01_1m]
-; platform = espressif8266
-; board = esp01_1m
-; board_build.mcu = esp8266
-; board_build.f_cpu = 80000000L
-; framework = arduino
-; ;***************************
-
-
-;  VALVES
-[env:esp12e]
+; ***************************
+[env:esp01_1m]
 platform = espressif8266
-board = esp12e
+board = esp01_1m
+board_build.mcu = esp8266
+board_build.f_cpu = 80000000L
 framework = arduino
+;***************************
+;
+;  VALVES
+; [env:esp12e]
+; platform = espressif8266
+; board = esp12e
+; framework = arduino
 
 ; GYRO
 ; [env:d1_mini_pro]
