remove hi res esp32 thermal cam

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,12 +12,12 @@
 ; ---------- SONOFF ----------
 ; way aroud for sonoff basic platform which has issues with Wire lib
 ; ***************************
-; [env:esp01_1m]
-; platform = espressif8266
-; board = esp01_1m
-; board_build.mcu = esp8266
-; board_build.f_cpu = 80000000L
-; framework = arduino
+[env:esp01_1m]
+platform = espressif8266
+board = esp01_1m
+board_build.mcu = esp8266
+board_build.f_cpu = 80000000L
+framework = arduino
 ;***************************
 ;
 ;  VALVES
@@ -42,17 +42,17 @@
 ;    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
 ;    toolchain-xtensa-esp32
 
-[env:a-star32U4]
-platform = atmelavr
-board = a-star32U4
-framework = arduino
+; ------------------------Obsolete or experimental -----------------------------
+; [env:a-star32U4]
+; platform = atmelavr
+; board = a-star32U4
+; framework = arduino
 
 ; [env:teensy40]
 ; platform = teensy
 ; board = teensy40
 ; framework = arduino
 
-; ------------------------Obsolete or experimental -----------------------------
 ; [env:esp07]
 ; platform = espressif8266
 ; board = esp07
